overlaping of squares during second click of btn solved

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,13 +16,9 @@ button{
 .container{
   display: flex;
   flex-wrap: wrap;
+
   border: 1px solid rgb(0, 0, 0); 
   width: 650px;
   height: 650px;
-}
-.item{
-  border: 1px solid rgb(0, 27, 232);
-}
-.item:hover{
-  background-color: yellow;
+
 }
